<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.asu.bsse.jstokke.assign1.MainActivity">

    <TextView
        android:id="@+id/main_select"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/spinner1_title" />
    <Spinner
        android:id="@+id/spinner"
        android:layout_below="@id/main_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp" />
        <!-- app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" --> 

    <TextView
        android:id="@+id/main_compare"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/distance"
        android:layout_below="@id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/main_compare" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/spinner2" />

    <Button
        android:id="@+id/distance_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner3"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/holo_blue_dark"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/button_distance"
        android:onClick="getCoordinates"/>

    <TextView
        android:id="@+id/distance_label"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/distance_label"
        android:layout_below="@id/distance_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/distance"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text=""
        android:layout_below="@id/distance_button"
        android:layout_toEndOf="@id/distance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/heading_label"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/heading_label"
        android:layout_below="@id/distance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/heading"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text=""
        android:layout_below="@id/distance"
        android:layout_toEndOf="@id/heading_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>

