<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.asu.bsse.jstokke.assign1.PlaceActivity">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/location_name"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/location_name"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toStartOf="@+id/descriptionField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameText" />

    <EditText
        android:id="@id/descriptionField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/description"
        android:inputType="text|textMultiLine"
        android:lines="2"
        android:selectAllOnFocus="false"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintBaseline_toBaselineOf="@+id/descriptionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/descriptionText" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/category"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toStartOf="@+id/categoryField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionText" />

    <EditText
        android:id="@id/categoryField"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/category"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintBaseline_toBaselineOf="@id/categoryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/categoryText" />

    <TextView
        android:id="@+id/addressTitleText"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/addressTitle"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toStartOf="@+id/addressTitleField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryText" />

    <EditText
        android:id="@id/addressTitleField"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/addressTitle"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintBaseline_toBaselineOf="@id/addressTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addressTitleText" />

    <TextView
        android:id="@+id/addressText"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/address"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toStartOf="@+id/addressField"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressTitleText" />

    <EditText
        android:id="@+id/addressField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/address"
        android:inputType="text|textMultiLine|textPostalAddress"
        android:lines="3"
        android:maxLines="3"
        android:selectAllOnFocus="false"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addressText"
        app:layout_constraintTop_toTopOf="@id/addressText" />

    <EditText
        android:id="@+id/elevationField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/elevation"
        android:inputType="text|number|numberSigned"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/elevationText"
        app:layout_constraintTop_toBottomOf="@id/addressField" />

    <TextView
        android:id="@+id/elevationText"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/elevation"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/elevationField" />

    <TextView
        android:id="@+id/latitudeText"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/latitude"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/elevationText" />

    <EditText
        android:id="@+id/latitudeField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/latitude"
        android:inputType="text|number|numberSigned"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/latitudeText"
        app:layout_constraintTop_toBottomOf="@id/elevationField" />

    <TextView
        android:id="@+id/longitudeText"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/longitude"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitudeText" />

    <EditText
        android:id="@+id/longitudeField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/longitude"
        android:inputType="text|number|numberSigned"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/longitudeText"
        app:layout_constraintTop_toBottomOf="@id/latitudeField" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="updatePlace"
        android:padding="10dp"
        android:text="@string/button_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitudeText" />

</android.support.constraint.ConstraintLayout>